Issue #25: Specify that PrintGCDetails is not recommended for standard logging for JDK7 due to being very verbose.